--- a/configs/c5/web_server.yaml
+++ b/configs/c5/web_server.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: selenium
+  name: kuard
 spec:
   containers:
-    - image: hub.docker.com/r/selenium/hub
-      name: selenium
+    - image: gcr.io/kuar-demo/kuard-amd64:1
+      name: kuard
       ports:
         - containerPort: 8080
           name: http
